force-app/main/default/objects/Position__c/fields/Functional_area__c.field-meta.xml
<CustomField>
    <fullName>Functional_area__c</fullName>
    <description>Department of the position</description>
    <label>Functional area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Human Resources</fullName>
            </value>
            <value>
                <fullName>Information Technology</fullName>
            </value>
            <value>
                <fullName>Retail Operations</fullName>
            </value>
            <value>
                <fullName>Warehousing</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>