force-app/main/default/objects/Position__c/fields/Hire_By__c.field-meta.xml
<CustomField>
    <fullName>Hire_By__c</fullName>
    <description>Candidates hired should be acknowledged before this date</description>
    <label>Hire By</label>
    <type>Date</type>
</CustomField>