force-app/main/default/objects/Position__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Positions</relationshipLabel>
    <relationshipName>Line_items</relationshipName>
    <type>Lookup</type>
</CustomField>