force-app/main/default/objects/Position__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Cities where this job position is open</description>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>San Francisco, CA</fullName>
            </value>
            <value>
                <fullName>Austin, TX</fullName>
            </value>
            <value>
                <fullName>Boulder, CO</fullName>
            </value>
            <value>
                <fullName>London, England</fullName>
            </value>
            <value>
                <fullName>New York, NY</fullName>
            </value>
            <value>
                <fullName>Mumbai, India</fullName>
            </value>
            <value>
                <fullName>Sydney, Australia</fullName>
            </value>
            <value>
                <fullName>Tokyo, Japan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>