force-app/main/default/objects/Position__c/fields/Location_on_map__c.field-meta.xml
<CustomField>
    <fullName>Location_on_map__c</fullName>
    <label>Location on map</label>
    <scale>4</scale>
    <type>Location</type>
</CustomField>