force-app/main/default/objects/Position__c/fields/No_of_days_open__c.field-meta.xml
<CustomField>
    <fullName>No_of_days_open__c</fullName>
    <description>The number of days a position has been (or was) open.</description>
    <formula>IF( ISBLANK( Close_Date__c ),  TODAY() - Open_date__c , Close_Date__c - Open_date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No of days open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>