force-app/main/default/objects/Position__c/fields/Open_date__c.field-meta.xml
<CustomField>
    <fullName>Open_date__c</fullName>
    <label>Open date</label>
    <type>Date</type>
</CustomField>