force-app/main/default/objects/Position__c/fields/Travel_required__c.field-meta.xml
<CustomField>
    <fullName>Travel_required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Travel required</label>
    <type>Checkbox</type>
</CustomField>