force-app/main/default/objects/Position__c/validationRules/Min_Pay_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Min_Pay_Rule</fullName>
    <active>true</active>
    <description>Minimum pay should never exceed max pay</description>
    <errorConditionFormula>IF( Min_Pay__c &gt;  Max_Pay__c , true, false)</errorConditionFormula>
    <errorMessage>Minimum pay cannot exceed the maximum pay</errorMessage>
</ValidationRule>