force-app/main/default/objects/Position__c/listViews/Unclaimed_Positions_Position.listView-meta.xml
<ListView>
    <fullName>Unclaimed_Positions_Position</fullName>
    <filterScope>Queue</filterScope>
    <label>Unclaimed Positions</label>
    <queue>Unclaimed_Positions</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>